# rust-on-lambda

./: .env.example  Cargo.toml  README.md  flake.nix  rust-toolchain
modules/application/: Cargo.toml
modules/application/src/: main.rs
modules/core/: Cargo.toml
modules/core/src/: lib.rs
modules/extension/: Cargo.toml
modules/extension/src/: events_extension.rs  main.rs
