[workspace]
resolver = "2"
members = ["modules/core", "modules/extension", "modules/application"]

[workspace.package]
authors = ["i10416"]
categories = ["example"]
description = "Rust on Lambda"
edition = "2024"
rust-version = "1.85.0"
homepage = "https://github.com/i10416/rust-on-lambda"
keywords = ["lambda", "aws"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/i10416/rust-on-lambda"
